<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolor"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="#2196F3"
        android:textSize="40sp"
        android:textStyle="italic"
        android:background="@color/white"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#87C9E6"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#37474F"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_margin="10dp"
        android:background="#87C9E6"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#87C9E6"
        android:padding="20dp"
        android:paddingTop="20dp"
        android:text="@string/login"
        android:textColor="#D50000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/forgot_password"
        android:textColor="@color/white"
        android:textColorHint="#0288D1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/or_sign_in_with"
        android:textColor="@color/white"
        android:textColorHint="#536DFE"
        android:textStyle="bold" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginbtn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#87C9E6"
        android:padding="20dp"
        android:paddingTop="20dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#D50000"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/others"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ImageButton
            android:id="@+id/twitter"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_margin="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/twitter"
            tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/fb"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_margin="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/fb"
            tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/gmail"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_margin="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/gmail"
            tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />


    </LinearLayout>

</RelativeLayout>