<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolor"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#03A9F4"
        android:drawableStart="@drawable/baseline_person_24"

        android:drawablePadding="20dp"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#4A148C"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#03A9F4"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="20dp"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="#1A237E" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userCheckbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="#03A9F4"
        android:padding="20dp"
        android:paddingTop="20dp"
        android:text="@string/registernew"
        android:textAlignment="center"
        android:textColor="#5E35B1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerBtn"
        android:paddingTop="20dp"
        android:textColor="#C3B113" />

    <Spinner
        android:id="@+id/userSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPassword"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:background="#00BCD4"
        android:padding="20dp" />

    <CheckBox
        android:id="@+id/userCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userSpinner"
        android:background="@color/white"
        android:text="@string/Terms"
        tools:ignore="VisualLintButtonSize" />

</RelativeLayout>